--- a/csharp-sdk.4.0/Qiniu.Test/Qiniu.4.0.Test.csproj
+++ b/csharp-sdk.4.0/Qiniu.Test/Qiniu.4.0.Test.csproj
@@ -9,6 +9,10 @@
     <OutputType>Library</OutputType>
     <RootNamespace>Qiniu.Test</RootNamespace>
     <AssemblyName>Qiniu.Test</AssemblyName>
+    <SccProjectName>Svn</SccProjectName>
+    <SccLocalPath>Svn</SccLocalPath>
+    <SccAuxPath>Svn</SccAuxPath>
+    <SccProvider>SubversionScc</SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
