--- a/MySerializable/MySerializable/MySerializable.csproj
+++ b/MySerializable/MySerializable/MySerializable.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Element_source.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="metadatas.cs" />
+    <Compile Include="Operation.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Story.cs" />
