--- a/MyCProgram/Docker/haproxy/haproxy.cfg
+++ b/MyCProgram/Docker/haproxy/haproxy.cfg
@@ -25,7 +25,8 @@ defaults
 frontend http_front
     bind *:88 ssl crt /etc/haproxy/certs/hive_crt.pem
     #haproxy的状态管理页面，通过/haproxy?stats来访问
-    stats uri /haproxy?stats
+    stats uri /haproxy?stats  
+
     default_backend http_back
 
 #后端配置，http_back名称可自定义
@@ -48,6 +49,14 @@ backend http_back
     # rise 3 检测多少次才认为是正常的
     # fall 3 失败多少次才认为是不可用的
     # weight 30 权重
-	server node1 192.168.31.200:9090 check inter 2000 rise 3 fall 3 weight 30
-    ##server node1 172.16.168.205:9021 check inter 2000 rise 3 fall 3 weight 30
-    ##server node2 www.baidu.com:80 check inter 2000 rise 3 fall 3 weight 30
+	
+	acl p_folder_images path_beg -i /CMApi/api/sobeyhive-fp/v1/flow/instance
+	http-request redirect location http://172.16.168.205:88/sobeyhive-fp/v1/flow/instance?%[query] if p_folder_images
+	
+	acl p_folder_images path_beg -i /CMApi/api/sobeyhive-fp/v1/flow/define/
+	http-request redirect location http://172.16.168.205:88/%[path] if p_folder_images
+	
+    
+    server node1 172.16.168.203:9020 check inter 2000 rise 3 fall 3 weight 30   #cmweb
+    #server node1 172.16.168.202:9022 check inter 2000 rise 3 fall 3 weight 30   #cmserver
+    #server node2 www.baidu.com:80 check inter 2000 rise 3 fall 3 weight 30
