--- a/MyCProgram/HTML/NodeJs/package.json
+++ b/MyCProgram/HTML/NodeJs/package.json
@@ -4,30 +4,10 @@
   "description": "Pages for Staging Financial App",
   "devDependencies": {
     "babel": "^5.8.34",
-    "browser-sync": "*",
-    "del": "*",
-    "gulp": "*",
-    "gulp-asset-rev": "*",
-    "gulp-concat": "*",
-    "gulp-if": "*",
-    "gulp-jshint": "*",
-    "gulp-load-plugins": "*",
-    "gulp-minify-css": "^*",
-    "gulp-minify-html": "*",
-    "gulp-sass": "*",
-    "gulp-size": "*",
-    "gulp-sourcemaps": "*",
-    "gulp-uglify": "*",
-    "gulp-useref": "*",
-    "jshint": "^2.9.4",
-    "run-sequence": "*",
     "body-parser": "^1.8.1",
-    "express": "^4.9.0",
-	"body-parser": "^1.8.1",
-    "express": "^4.9.0",
-	"babel":"^5.8.34",
     "browser-sync": "*",
     "del": "*",
+    "express": "^4.9.0",
     "gulp": "*",
     "gulp-asset-rev": "*",
     "gulp-concat": "*",
@@ -42,24 +22,7 @@
     "gulp-uglify": "*",
     "gulp-useref": "*",
     "jshint": "^2.9.4",
-    "run-sequence": "*",
-	"babel":"^5.8.34",
-    "browser-sync": "*",
-    "del": "*",
-    "gulp": "*",
-    "gulp-asset-rev": "*",
-    "gulp-concat": "*",
-    "gulp-if": "*",
-    "gulp-jshint": "*",
-    "gulp-load-plugins": "*",
-    "gulp-minify-css": "^*",
-    "gulp-minify-html": "*",
-    "gulp-sass": "*",
-    "gulp-size": "*",
-    "gulp-sourcemaps": "*",
-    "gulp-uglify": "*",
-    "gulp-useref": "*",
-    "jshint": "^2.9.4",
+    "nodemailer": "^4.3.1",
     "run-sequence": "*"
   },
   "engines": {
