--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,9 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+*.json
+*.json
+*.json
+*.json
+*.json
+MyCProgram/HTML/JQuery/jijing/data/AllList.json
