--- a/MyOwin/NhostDB/App.config
+++ b/MyOwin/NhostDB/App.config
@@ -1,6 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="NhostDB.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+    <userSettings>
+        <NhostDB.Properties.Settings>
+            <setting name="connStr" serializeAs="String">
+                <value>server=172.16.168.205;user id=sdba;password=sdba;database=mldb;pooling=True;allowzerodatetime=True;allowuservariables=True;minpoolsize=10;characterset=utf8</value>
+            </setting>
+        </NhostDB.Properties.Settings>
+    </userSettings>
 </configuration>
