--- a/Transfer.Flow.Core/Transfer.Flow.Core/Transfer.Flow.Core.csproj
+++ b/Transfer.Flow.Core/Transfer.Flow.Core/Transfer.Flow.Core.csproj
@@ -42,16 +42,16 @@
   <ItemGroup>
     <Compile Include="Data\FactoryBase.cs" />
     <Compile Include="Data\TaskCenter.cs" />
-    <Compile Include="LogerTraceListener.cs" />
+    <Compile Include="InsertArchiveMaterial2HiveStep.cs" />
     <Compile Include="Process\CheckArchiveMaterialFileStatusStep.cs" />
     <Compile Include="Process\CopyArchiveMaterialLowQualityStep.cs" />
     <Compile Include="Process\GenerateArhiveMaterialLowQualityStep.cs" />
     <Compile Include="Process\GetArchiveMaterialInfoStep.cs" />
     <Compile Include="Process\GetArhiveMaterialIdStep.cs" />
     <Compile Include="StepBase.cs" />
-    <Compile Include="Process\InsertArchiveMaterial2HiveStep.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TaskInfo.cs" />
+    <Compile Include="util.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="InterFace\" />
