--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,20 @@ Temporary Items
 *.json
 MyCProgram/HTML/JQuery/jijing/data/AllList.json
 *.mp4
+/MyOwin/ConsoleApplication1/obj/Debug
+/MyOwin/ClassLibrary1/obj/Debug
+/MyOwin/ClassLibrary2/obj/Debug
+/MyOwin/NhostDB/obj/Debug
+/MyOwin/PlayoutDb/obj/Debug
+/MyOwin/Sony.S2.MOS.MOSGWConsole/obj/Debug
+/MyOwin/Sony.S2.MOS.MOSGWService/obj/Debug
+/MyOwin/TcpClientTest/obj/Debug
+/MyOwin/WindowsFormsApplication1/obj/Debug
+/MyOwin/myWebClient/obj/Debug
+/MyOwin/MyOwin/obj/Debug
+/MyOwin/ConsoleApplication2/obj/Debug
+/MyOwin/ConsoleApplication3/obj/Debug
+/MyOwin/packages/RestSharp.105.2.3
+/MyOwin/.vs/MyOwin/v15
+/MyOwin/Bank/obj/Debug
+/MyOwin/Bank/bin/Debug
