--- a/MyCProgram/Docker/Python/Dockerfile
+++ b/MyCProgram/Docker/Python/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:latest
+FROM docker.io/10sr/centos6.6-python2.7:latest
 COPY ./ /usr/src/myapp
 ADD ./run.sh /run.sh
 WORKDIR /usr/src/myapp
