--- a/MyCProgram/HTML/NodeJs/jijing/package.json
+++ b/MyCProgram/HTML/NodeJs/jijing/package.json
@@ -11,5 +11,15 @@
     "jijing"
   ],
   "author": "wangfugui",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "async": "^3.1.1",
+    "crc32": "^0.2.2",
+    "date-utils": "^1.2.21",
+    "mysql": "^2.18.1",
+    "node-schedule": "^1.3.2",
+    "request": "^2.88.0",
+    "urlencode": "^1.1.0",
+    "urllib": "^2.34.2"
+  }
 }
