--- a/MyCProgram/Docker/Mysql/my.cnf
+++ b/MyCProgram/Docker/Mysql/my.cnf
@@ -1,6 +1,25 @@
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, write to the Free Software
+# Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301 USA
+
+#
+# The MySQL  Server configuration file.
+#
+# For explanations see
+# http://dev.mysql.com/doc/mysql/en/server-system-variables.html
+
 [mysqld]
-bind-address=0.0.0.0
-# http://www.percona.com/blog/2008/05/31/dns-achilles-heel-mysql-installation/
-skip_name_resolve
-#server-id
-#log-bin
+pid-file        = /var/run/mysqld/mysqld.pid
+socket          = /var/run/mysqld/mysqld.sock
+datadir         = /var/lib/mysql
+secure-file-priv= NULL
+
+# Custom config should go here
+!includedir /etc/mysql/conf.d/
+
+lower_case_table_names=1
