--- a/.gitignore
+++ b/.gitignore
@@ -122,3 +122,184 @@ MyCProgram/HTML/NodeJs/NESN/data/20201118192039/6_20201118192039_.bat
 MyCProgram/HTML/NodeJs/NESN/data/20201118192039/7_20201118192039_.bat
 MyCProgram/HTML/NodeJs/NESN/data/20201118192039_new.bat
 MyCProgram/HTML/NodeJs/NESN/data/20201118192039_new.zip
+MyCProgram/Docker/Mysql/data/\#ib_16384_0.dblwr
+MyCProgram/Docker/Mysql/data/\#ib_16384_1.dblwr
+MyCProgram/Docker/Mysql/data/\#innodb_redo/\#ib_redo10_tmp
+MyCProgram/Docker/Mysql/data/\#innodb_redo/\#ib_redo11_tmp
+MyCProgram/Docker/Mysql/data/\#innodb_redo/\#ib_redo12_tmp
+MyCProgram/Docker/Mysql/data/\#innodb_redo/\#ib_redo13_tmp
+MyCProgram/Docker/Mysql/data/\#innodb_redo/\#ib_redo14_tmp
+MyCProgram/Docker/Mysql/data/\#innodb_redo/\#ib_redo15_tmp
+MyCProgram/Docker/Mysql/data/\#innodb_redo/\#ib_redo16_tmp
+MyCProgram/Docker/Mysql/data/\#innodb_redo/\#ib_redo17_tmp
+MyCProgram/Docker/Mysql/data/\#innodb_redo/\#ib_redo18_tmp
+MyCProgram/Docker/Mysql/data/\#innodb_redo/\#ib_redo19_tmp
+MyCProgram/Docker/Mysql/data/\#innodb_redo/\#ib_redo20_tmp
+MyCProgram/Docker/Mysql/data/\#innodb_redo/\#ib_redo21_tmp
+MyCProgram/Docker/Mysql/data/\#innodb_redo/\#ib_redo22_tmp
+MyCProgram/Docker/Mysql/data/\#innodb_redo/\#ib_redo23_tmp
+MyCProgram/Docker/Mysql/data/\#innodb_redo/\#ib_redo24_tmp
+MyCProgram/Docker/Mysql/data/\#innodb_redo/\#ib_redo25_tmp
+MyCProgram/Docker/Mysql/data/\#innodb_redo/\#ib_redo26_tmp
+MyCProgram/Docker/Mysql/data/\#innodb_redo/\#ib_redo27_tmp
+MyCProgram/Docker/Mysql/data/\#innodb_redo/\#ib_redo28_tmp
+MyCProgram/Docker/Mysql/data/\#innodb_redo/\#ib_redo29_tmp
+MyCProgram/Docker/Mysql/data/\#innodb_redo/\#ib_redo30_tmp
+MyCProgram/Docker/Mysql/data/\#innodb_redo/\#ib_redo31_tmp
+MyCProgram/Docker/Mysql/data/\#innodb_redo/\#ib_redo32_tmp
+MyCProgram/Docker/Mysql/data/\#innodb_redo/\#ib_redo33_tmp
+MyCProgram/Docker/Mysql/data/\#innodb_redo/\#ib_redo34_tmp
+MyCProgram/Docker/Mysql/data/\#innodb_redo/\#ib_redo35_tmp
+MyCProgram/Docker/Mysql/data/\#innodb_redo/\#ib_redo36_tmp
+MyCProgram/Docker/Mysql/data/\#innodb_redo/\#ib_redo37_tmp
+MyCProgram/Docker/Mysql/data/\#innodb_redo/\#ib_redo38_tmp
+MyCProgram/Docker/Mysql/data/\#innodb_redo/\#ib_redo39_tmp
+MyCProgram/Docker/Mysql/data/\#innodb_redo/\#ib_redo40_tmp
+MyCProgram/Docker/Mysql/data/\#innodb_redo/\#ib_redo9
+MyCProgram/Docker/Mysql/data/\#innodb_temp/temp_1.ibt
+MyCProgram/Docker/Mysql/data/\#innodb_temp/temp_10.ibt
+MyCProgram/Docker/Mysql/data/\#innodb_temp/temp_2.ibt
+MyCProgram/Docker/Mysql/data/\#innodb_temp/temp_3.ibt
+MyCProgram/Docker/Mysql/data/\#innodb_temp/temp_4.ibt
+MyCProgram/Docker/Mysql/data/\#innodb_temp/temp_5.ibt
+MyCProgram/Docker/Mysql/data/\#innodb_temp/temp_6.ibt
+MyCProgram/Docker/Mysql/data/\#innodb_temp/temp_7.ibt
+MyCProgram/Docker/Mysql/data/\#innodb_temp/temp_8.ibt
+MyCProgram/Docker/Mysql/data/\#innodb_temp/temp_9.ibt
+MyCProgram/Docker/Mysql/data/auto.cnf
+MyCProgram/Docker/Mysql/data/binlog.000001
+MyCProgram/Docker/Mysql/data/binlog.000002
+MyCProgram/Docker/Mysql/data/binlog.index
+MyCProgram/Docker/Mysql/data/ca-key.pem
+MyCProgram/Docker/Mysql/data/ca.pem
+MyCProgram/Docker/Mysql/data/client-cert.pem
+MyCProgram/Docker/Mysql/data/client-key.pem
+MyCProgram/Docker/Mysql/data/dapr_state_store/state.ibd
+MyCProgram/Docker/Mysql/data/ib_buffer_pool
+MyCProgram/Docker/Mysql/data/ibdata1
+MyCProgram/Docker/Mysql/data/ibtmp1
+MyCProgram/Docker/Mysql/data/mysql.ibd
+MyCProgram/Docker/Mysql/data/mysql.sock
+MyCProgram/Docker/Mysql/data/mysql/general_log.CSM
+MyCProgram/Docker/Mysql/data/mysql/general_log.CSV
+MyCProgram/Docker/Mysql/data/mysql/general_log_213.sdi
+MyCProgram/Docker/Mysql/data/mysql/slow_log.CSM
+MyCProgram/Docker/Mysql/data/mysql/slow_log.CSV
+MyCProgram/Docker/Mysql/data/mysql/slow_log_214.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/accounts_145.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/binary_log_trans_189.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/cond_instances_82.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/data_lock_waits_161.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/data_locks_160.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/error_log_83.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/events_errors_su_139.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/events_errors_su_140.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/events_errors_su_141.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/events_errors_su_142.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/events_errors_su_143.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/events_stages_cu_111.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/events_stages_hi_112.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/events_stages_hi_113.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/events_stages_su_114.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/events_stages_su_115.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/events_stages_su_116.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/events_stages_su_117.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/events_stages_su_118.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/events_statement_119.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/events_statement_120.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/events_statement_121.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/events_statement_122.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/events_statement_123.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/events_statement_124.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/events_statement_125.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/events_statement_126.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/events_statement_127.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/events_statement_128.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/events_statement_129.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/events_statement_130.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/events_transacti_131.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/events_transacti_132.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/events_transacti_133.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/events_transacti_134.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/events_transacti_135.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/events_transacti_136.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/events_transacti_137.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/events_transacti_138.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/events_waits_cur_84.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/events_waits_his_85.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/events_waits_his_86.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/events_waits_sum_87.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/events_waits_sum_88.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/events_waits_sum_89.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/events_waits_sum_90.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/events_waits_sum_91.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/events_waits_sum_92.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/file_instances_93.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/file_summary_by__94.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/file_summary_by__95.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/global_status_181.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/global_variables_184.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/host_cache_96.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/hosts_146.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/keyring_componen_191.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/keyring_keys_152.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/log_status_174.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/memory_summary_b_154.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/memory_summary_b_155.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/memory_summary_b_156.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/memory_summary_b_157.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/memory_summary_g_153.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/metadata_locks_159.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/mutex_instances_97.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/objects_summary__98.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/performance_time_99.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/persisted_variab_187.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/prepared_stateme_175.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/processlist_100.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/replication_appl_165.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/replication_appl_166.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/replication_appl_167.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/replication_appl_168.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/replication_appl_170.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/replication_appl_171.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/replication_asyn_172.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/replication_asyn_173.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/replication_conn_162.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/replication_conn_164.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/replication_grou_163.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/replication_grou_169.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/rwlock_instances_101.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/session_account__151.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/session_connect__150.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/session_status_182.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/session_variable_185.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/setup_actors_102.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/setup_consumers_103.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/setup_instrument_104.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/setup_objects_105.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/setup_threads_106.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/socket_instances_147.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/socket_summary_b_148.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/socket_summary_b_149.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/status_by_accoun_177.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/status_by_host_178.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/status_by_thread_179.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/status_by_user_180.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/table_handles_158.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/table_io_waits_s_107.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/table_io_waits_s_108.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/table_lock_waits_109.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/threads_110.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/tls_channel_stat_190.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/user_defined_fun_188.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/user_variables_b_176.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/users_144.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/variables_by_thr_183.sdi
+MyCProgram/Docker/Mysql/data/performance_schema/variables_info_186.sdi
+MyCProgram/Docker/Mysql/data/private_key.pem
+MyCProgram/Docker/Mysql/data/public_key.pem
+MyCProgram/Docker/Mysql/data/server-cert.pem
+MyCProgram/Docker/Mysql/data/server-key.pem
+MyCProgram/Docker/Mysql/data/sys/sys_config.ibd
+MyCProgram/Docker/Mysql/data/undo_001
+MyCProgram/Docker/Mysql/data/undo_002
